add staticfiles to students_list.html

--- a/students/templates/students/groups_list.html
+++ b/students/templates/students/groups_list.html
@@ -18,7 +18,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="../../static/css/main.css">
 </head>
 
 <body>
