--- a/students/templates/students/students_list.html
+++ b/students/templates/students/students_list.html
@@ -80,66 +80,30 @@
                     </tr>
                     </thead>
                     <tbody>
+
+                    {% for student in students %}
                     <tr>
-                        <td>1</td>
-                        <td><img src="{% static "img/podoba3.jpg" %}" height="30" width="30" class="img-circle"></td>
-                        <td><a title="Редагувати" href="{% url "students_edit" 1 %}">Корост</a></td>
-                        <td><a title="Редагувати" href="{% url "students_edit" 1 %}">Андрій</a></td>
-                        <td>2123</td>
+                        <td>{{ forloop.counter }}</td>
+                        <td><img src="{% static student.image %}" height="30" width="30" class="img-circle"></td>
+                        <td><a title="Редагувати" href="{% url "students_edit" student.id %}">{{ student.last_name }}</a></td>
+                        <td><a title="Редагувати" href="{% url "students_edit" student.id %}">{{ student.first_name }}</a></td>
+                        <td>{{ student.ticket }}</td>
                         <td>
                             <div class="btn-group">
                                 <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Дія <span class="caret"></span>
                                 </button>
                                 <ul class="dropdown-menu dropdown-menu-right">
-                                    <li><a href="{% url "students_edit" 1 %}">Редагувати</a></li>
-                                    <li><a href="/journal">Відвідування</a></li>
+                                    <li><a href="{% url "students_edit" student.id %}">Редагувати</a></li>
+                                    <li><a href="/journal/{{ student.id }}">Відвідування</a></li>
                                     <li role="separator" class="divider"></li>
-                                    <li><a href="{% url "students_delete" 1 %}">Видалити</a></li>
+                                    <li><a href="{% url "students_delete" student.id %}">Видалити</a></li>
                                 </ul>
                             </div>
                         </td>
                     </tr>
-                    <tr>
-                        <td>2</td>
-                        <td><img src="{% static "img/me.jpeg" %}" height="30" width="30" class="img-circle"></td>
-                        <td><a title="Редагувати" href="{% url "students_edit" 2 %}">Подоба</a></td>
-                        <td><a title="Редагувати" href="{% url "students_edit" 2 %}">Віталій</a></td>
-                        <td>254</td>
-                        <td>
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Дія <span class="caret"></span>
-                                </button>
-                                <ul class="dropdown-menu dropdown-menu-right">
-                                    <li><a href="{% url "students_edit" 2 %}">Редагувати</a></li>
-                                    <li><a href="/journal">Відвідування</a></li>
-                                    <li role="separator" class="divider"></li>
-                                    <li><a href="{% url "students_delete" 2 %}">Видалити</a></li>
-                                </ul>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td><img src="{% static "img/piv.png" %}" height="30" width="30" class="img-circle"></td>
-                        <td><a title="Редагувати" href="{% url "students_edit" 3 %}">Притула</a></td>
-                        <td><a title="Редагувати" href="{% url "students_edit" 3 %}">Тарас</a></td>
-                        <td>5332</td>
-                        <td>
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Дія <span class="caret"></span>
-                                </button>
-                                <ul class="dropdown-menu dropdown-menu-right">
-                                    <li><a href="{% url "students_edit" 3 %}">Редагувати</a></li>
-                                    <li><a href="/journal">Відвідування</a></li>
-                                    <li role="separator" class="divider"></li>
-                                    <li><a href="{% url "students_delete" 3 %}">Видалити</a></li>
-                                </ul>
-                            </div>
-                        </td>
-                    </tr>
+                    {% endfor %}
+
                     </tbody>
                 </table>
                 <!-- End Students Listing -->
