--- a/students/templates/students/students_list.html
+++ b/students/templates/students/students_list.html
@@ -1,148 +1,70 @@
+{% extends "students/base.html" %}
+
 {% load static from staticfiles %}
 
-<!DOCTYPE html>
-<html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" value="Система обліку студентів Навчального Закладу">
-    <title>Сервіс обліку студентів</title>
+{% block meta_title %}Студенти{% endblock meta_title %}
 
-    <!-- Bootstrap -->
-    <!-- <link rel="stylesheet" href="./css/bootstrap.min.css"> -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+{% block title %}База Студентів{% endblock title %}
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
-    <link rel="stylesheet" href="{% static "css/main.css" %}">
-</head>
+{% block content %}
 
-<body>
-    <!-- Start container -->
-    <div class="container">
+<!-- Add Student Button -->
+<a class="btn btn-primary" href="{% url "students_add" %}">Додати Студента</a>
 
-        <!-- Start header -->
-        <div class="row" id="header">
-            <!-- Logo -->
-            <div class="col-xs-8">
-                <h1>Сервіс Обліку Студентів</h1>
-            </div>
-            <!-- Groups Selector -->
-            <div class="col-xs-4" id="group-selector">
-                <strong>Група:</strong>
-                <select>
-                    <option value="">Усі Студенти</option>
-                    <option value="">МтМ - 21, Подоба Віталій (№ 254)</option>
-                    <option value="">МтМ - 22, Корост Андрій (№ 2123)</option>
-                </select>
-            </div>
-        </div>
-        <!-- End header -->
+<!-- Start Students Listing -->
+<table class="table table-hover table-striped table-condensed">
+    <thead>
+    <tr>
+        <th><a href="#">#</a></th>
+        <th>Фото</th>
+        <th><a href="#">Прізвище&uarr;</a></th>
+        <th><a href="#">Ім'я</a></th>
+        <th><a href="#">№ білета</a></th>
+        <th>Дії</th>
+    </tr>
+    </thead>
+    <tbody>
 
-        <!-- Start sub-header -->
-        <div class="row" id="sub-header">
-            <div class="col-xs-12">
-                <ul class="nav nav-tabs">
-                    <li role="presentation" class="active"><a href="{% url "home" %}">Студенти</a></li>
-                    <li role="presentation"><a href="/journal">Відвідування</a></li>
-                    <li role="presentation"><a href="{% url "groups" %}">Групи</a></li>
+    {% for student in students %}
+    <tr>
+        <td>{{ forloop.counter }}</td>
+        <td><img src="{% static student.image %}" height="30" width="30" class="img-circle"></td>
+        <td><a title="Редагувати" href="{% url "students_edit" student.id %}">{{ student.last_name }}</a></td>
+        <td><a title="Редагувати" href="{% url "students_edit" student.id %}">{{ student.first_name }}</a></td>
+        <td>{{ student.ticket }}</td>
+        <td>
+            <div class="btn-group">
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Дія <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu dropdown-menu-right">
+                    <li><a href="{% url "students_edit" student.id %}">Редагувати</a></li>
+                    <li><a href="/journal/{{ student.id }}">Відвідування</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="{% url "students_delete" student.id %}">Видалити</a></li>
                 </ul>
             </div>
-        </div>
-        <!-- End sub-header -->
+        </td>
+    </tr>
+    {% endfor %}
 
-        <!-- Start Main Page Content -->
-        <div class="row" id="content-columns">
-            <div class="col-xs-12" id="content-column">
-                <!-- Status Message -->
-                <div class="alert alert-warning">Зміни скасовано</div>
-                <!-- Tittle -->
-                <h2>База Студентів</h2>
-                <!-- Add Student Button -->
-                <a class="btn btn-primary" href="{% url "students_add" %}">Додати Студента</a>
+    </tbody>
+</table>
+<!-- End Students Listing -->
 
-                <!-- Start Students Listing -->
-                <table class="table table-hover table-striped table-condensed">
-                    <thead>
-                    <tr>
-                        <th><a href="#">#</a></th>
-                        <th>Фото</th>
-                        <th><a href="#">Прізвище&uarr;</a></th>
-                        <th><a href="#">Ім'я</a></th>
-                        <th><a href="#">№ білета</a></th>
-                        <th>Дії</th>
-                    </tr>
-                    </thead>
-                    <tbody>
+<!-- Start Pagination -->
+<nav>
+    <ul class="pagination">
+        <li><a href="#">&laquo;</a></li>
+        <li><a href="#">1</a></li>
+        <li class="active"><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">4</a></li>
+        <li><a href="#">5</a></li>
+        <li><a href="#">&raquo;</a></li>
+    </ul>
+</nav>
+<!-- End Pagination -->
 
-                    {% for student in students %}
-                    <tr>
-                        <td>{{ forloop.counter }}</td>
-                        <td><img src="{% static student.image %}" height="30" width="30" class="img-circle"></td>
-                        <td><a title="Редагувати" href="{% url "students_edit" student.id %}">{{ student.last_name }}</a></td>
-                        <td><a title="Редагувати" href="{% url "students_edit" student.id %}">{{ student.first_name }}</a></td>
-                        <td>{{ student.ticket }}</td>
-                        <td>
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Дія <span class="caret"></span>
-                                </button>
-                                <ul class="dropdown-menu dropdown-menu-right">
-                                    <li><a href="{% url "students_edit" student.id %}">Редагувати</a></li>
-                                    <li><a href="/journal/{{ student.id }}">Відвідування</a></li>
-                                    <li role="separator" class="divider"></li>
-                                    <li><a href="{% url "students_delete" student.id %}">Видалити</a></li>
-                                </ul>
-                            </div>
-                        </td>
-                    </tr>
-                    {% endfor %}
-
-                    </tbody>
-                </table>
-                <!-- End Students Listing -->
-
-                <!-- Start Pagination -->
-                <nav>
-                    <ul class="pagination">
-                        <li><a href="#">&laquo;</a></li>
-                        <li><a href="#">1</a></li>
-                        <li class="active"><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#">4</a></li>
-                        <li><a href="#">5</a></li>
-                        <li><a href="#">&raquo;</a></li>
-                    </ul>
-                </nav>
-                <!-- End Pagination -->
-
-            </div>
-        </div>
-        <!-- End Main Page Content -->
-
-        <!-- Start footer -->
-        <div class="row" id="footer">
-            <div class="col-xs-12">
-                &copy 2016, Сервіс Обліку Студентів
-            </div>
-        </div>
-        <!-- End footer -->
-
-    </div>
-    <!-- End container -->
-
-    <!-- jQuery -->
-    <!-- <script src="./js/jquery.min.js"></script> -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-
-    <!-- Bootstrap JS -->
-    <!-- <script src="./js/bootstrap.min.js"></script> -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-</body>
-</html>
+{% endblock content %}
