--- a/students/templates/students/groups_list.html
+++ b/students/templates/students/groups_list.html
@@ -1,139 +1,63 @@
+{% extends "students/base.html" %}
+
 {% load static from staticfiles %}
 
-<!DOCTYPE html>
-<html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" value="Система обліку студентів Навчального Закладу">
-    <title>Сервіс обліку студентів</title>
+{% block meta_title %}Групи{% endblock meta_title %}
 
-    <!-- Bootstrap -->
-    <!-- <link rel="stylesheet" href="./css/bootstrap.min.css"> -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+{% block title %}Групи{% endblock title %}
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
-    <link rel="stylesheet" href="{% static "css/main.css" %}">
-</head>
+{% block content %}
 
-<body>
-    <!-- Start container -->
-    <div class="container">
+<!-- Add Group Button -->
+<a class="btn btn-primary" href="{% url "groups_add" %}">Додати групу</a>
 
-        <!-- Start header -->
-        <div class="row" id="header">
-            <!-- Logo -->
-            <div class="col-xs-8">
-                <h1>Сервіс Обліку Студентів</h1>
-            </div>
-            <!-- Groups Selector -->
-            <div class="col-xs-4" id="group-selector">
-                <strong>Група:</strong>
-                <select>
-                    <option value="">Усі Студенти</option>
-                    <option value="">МтМ - 21, Подоба Віталій (№ 254)</option>
-                    <option value="">МтМ - 22, Корост Андрій (№ 2123)</option>
-                </select>
-            </div>
-        </div>
-        <!-- End header -->
+<!-- Start Groups Listing -->
+<table class="table table-hover table-striped">
+    <thead>
+    <tr>
+        <th><a href="#">#</a></th>
+        <th><a href="#">Назва &uarr;</a></th>
+        <th><a href="#">Староста</a></th>
+        <th>Дії</th>
+    </tr>
+    </thead>
+    <tbody>
 
-        <!-- Start sub-header -->
-        <div class="row" id="sub-header">
-            <div class="col-xs-12">
-                <ul class="nav nav-tabs" role="tablist">
-                    <li role="presentation"><a href="{% url "home" %}">Студенти</a></li>
-                    <li role="presentation"><a href="/journal">Відвідування</a></li>
-                    <li role="presentation" class="active"><a href="{% url "groups" %}">Групи</a></li>
+    {% for group in groups %}
+    <tr>
+        <td>{{ forloop.counter }}</td>
+        <td><a title="Редагувати" href="#">{{ group.group_name }}</a></td>
+        <td><a title="Редагувати" href="#">{{ group.group_leader }}</a></td>
+        <td>
+            <div class="btn-group">
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Дія <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu dropdown-menu-right">
+                    <li><a href="{% url "groups_edit" group.id %}">Редагувати</a></li>
+                    <li><a href="/journal/{{ group.id }}">Відвідування</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="{% url "groups_delete" group.id %}">Видалити</a></li>
                 </ul>
             </div>
-        </div>
-        <!-- End sub-header -->
+        </td>
+    </tr>
+    {% endfor %}
 
-        <!-- Start Main Page Content -->
-        <div class="row" id="content-columns">
-            <div class="col-xs-12" id="content-column">
+    </tbody>
+</table>
+<nav>
+  <ul class="pagination">
+    <li class="disabled"><a href="#">1</a></li>
+    <li><a href="#">2</a></li>
+    <li>
+      <a href="#" aria-label="Next">
+        <span aria-hidden="true">Далі</span>
+      </a>
+    </li>
+  </ul>
+</nav>
+<!-- End Groups Listing -->
 
-                <h2>Групи</h2>
-
-                <!-- Add Group Button -->
-                <a class="btn btn-primary" href="{% url "groups_add" %}">Додати групу</a>
-
-                <!-- Start Groups Listing -->
-                <table class="table table-hover table-striped">
-                    <thead>
-                    <tr>
-                        <th><a href="#">#</a></th>
-                        <th><a href="#">Назва &uarr;</a></th>
-                        <th><a href="#">Староста</a></th>
-                        <th>Дії</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-
-                    {% for group in groups %}
-                    <tr>
-                        <td>{{ forloop.counter }}</td>
-                        <td><a title="Редагувати" href="#">{{ group.group_name }}</a></td>
-                        <td><a title="Редагувати" href="#">{{ group.group_leader }}</a></td>
-                        <td>
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Дія <span class="caret"></span>
-                                </button>
-                                <ul class="dropdown-menu dropdown-menu-right">
-                                    <li><a href="{% url "groups_edit" group.id %}">Редагувати</a></li>
-                                    <li><a href="/journal/{{ group.id }}">Відвідування</a></li>
-                                    <li role="separator" class="divider"></li>
-                                    <li><a href="{% url "groups_delete" group.id %}">Видалити</a></li>
-                                </ul>
-                            </div>
-                        </td>
-                    </tr>
-                    {% endfor %}
-
-                    </tbody>
-                </table>
-                <nav>
-                  <ul class="pagination">
-                    <li class="disabled"><a href="#">1</a></li>
-                    <li><a href="#">2</a></li>
-                    <li>
-                      <a href="#" aria-label="Next">
-                        <span aria-hidden="true">Далі</span>
-                      </a>
-                    </li>
-                  </ul>
-                </nav>
-                <!-- End Groups Listing -->
-            </div>
-        </div>
-        <!-- End Main Page Content -->
-
-        <!-- Start footer -->
-        <div class="row" id="footer">
-            <div class="col-xs-12">
-                &copy 2016, Сервіс Бази Студентів
-            </div>
-        </div>
-        <!-- End footer -->
-
-    </div>
-    <!-- End container -->
-
-    <!-- jQuery -->
-    <!-- <script src="./js/jquery.min.js"></script> -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-
-    <!-- Bootstrap JS -->
-    <!-- <script src="./js/bootstrap.min.js"></script> -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-</body>
-</html>
+{% endblock content %}
