--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -52,7 +52,7 @@
             <div class="col-xs-12">
                 <ul class="nav nav-tabs">
                     <li role="presentation" class="active"><a href="{% url "home" %}">Студенти</a></li>
-                    <li role="presentation"><a href="/journal">Відвідування</a></li>
+                    <li role="presentation"><a href="{% url "journal" %}">Відвідування</a></li>
                     <li role="presentation"><a href="{% url "groups" %}">Групи</a></li>
                 </ul>
             </div>
