--- a/students/templates/students/journal.html
+++ b/students/templates/students/journal.html
@@ -1,72 +1,17 @@
-<!DOCTYPE html>
-<html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" value="Система обліку студентів Навчального Закладу">
-    <title>Сервіс обліку студентів</title>
+{% extends "students/base.html" %}
 
-    <!-- Bootstrap -->
-    <!-- <link rel="stylesheet" href="./css/bootstrap.min.css"> -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+{% load static from staticfiles %}
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+{% block meta_title %}Журнал{% endblock meta_title %}
 
-    <link rel="stylesheet" href="../../static/css/main.css">
-</head>
+{% block title %}Облік відвідування{% endblock title %}
 
-<body>
-    <!-- Start container -->
-    <div class="container">
 
-        <!-- Start header -->
-        <div class="row" id="header">
-            <div class="col-xs-12">
-                <!-- Logo -->
-                <div class="col-xs-8">
-                    <h1>Сервіс Обліку Студентів</h1>
-                </div>
-                <!-- Groups Selector -->
-                <div class="col-xs-4" id="group-selector">
-                    <strong>Група:</strong>
-                    <select>
-                        <option value="">Усі Студенти</option>
-                        <option value="">МтМ - 21, Подоба Віталій (№ 254)</option>
-                        <option value="">МтМ - 22, Корост Андрій (№ 2123)</option>
-                    </select>
-                </div>
-            </div>
-        </div>
-        <!-- End header -->
-
-        <!-- Start sub-header -->
-        <div class="row" id="sub-header">
-            <div class="col-xs-12">
-                <ul class="nav nav-tabs" role="tablist">
-                    <li role="presentation">
-                        <a href="#">Студенти</a>
-                    </li>
-                    <li role="presentation" class="active">
-                        <a href="#">Відвідування</a>
-                    </li>
-                    <li role="presentation">
-                        <a href="#">Групи</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <!-- End sub-header -->
+{% block content %}
 
         <!-- Start Main Page Content -->
         <div class="row">
             <div class="col-xs-12">
-                <h2>Облік відвідування</h2>
                 <div class="table-caption">
                     <a href="#">&larr;</a>
                     <a href="#">Березень 2016</a>
@@ -230,23 +175,4 @@
         </div>
         <!-- End Main Page Content -->
 
-        <!-- Start footer -->
-        <div class="row" id="footer">
-            <div class="col-xs-12">
-                &copy 2016, Сервіс Обліку Студентів
-            </div>
-        </div>
-        <!-- End footer -->
-
-    </div>
-    <!-- End container -->
-
-    <!-- jQuery -->
-    <!-- <script src="./js/jquery.min.js"></script> -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-
-    <!-- Bootstrap JS -->
-    <!-- <script src="./js/bootstrap.min.js"></script> -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-</body>
-</html>
+{% endblock content %}
