--- a/students/templates/students/students_edit.html
+++ b/students/templates/students/students_edit.html
@@ -1,30 +1,16 @@
-<!DOCTYPE html>
-<html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" value="Система обліку студентів Навчального Закладу">
-    <title>Форма редагування студента</title>
+{% extends "students/base.html" %}
 
-    <!-- Bootstrap -->
-    <!-- <link rel="stylesheet" href="./css/bootstrap.min.css"> -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+{% load static from staticfiles %}
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+{% block meta_title %}Редагування студента{% endblock meta_title %}
 
-    <link rel="stylesheet" href="../../static/css/main.css">
-</head>
+{% block title %}Форма редагування студента{% endblock title %}
 
-<body>
+
+{% block content %}
+
     <!-- Start container -->
     <div class="container">
-        <h2>Форма редагування студента</h2>
 
         <!-- Start form -->
         <form class="form-horizontal" role="form">
@@ -118,12 +104,4 @@
     </div>
     <!-- End container -->
 
-    <!-- jQuery -->
-    <!-- <script src="./js/jquery.min.js"></script> -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-
-    <!-- Bootstrap JS -->
-    <!-- <script src="./js/bootstrap.min.js"></script> -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-</body>
-</html>
+{% endblock content %}
