--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -51,9 +51,15 @@
         <div class="row" id="sub-header">
             <div class="col-xs-12">
                 <ul class="nav nav-tabs">
-                    <li role="presentation" class="active"><a href="{% url "home" %}">Студенти</a></li>
-                    <li role="presentation"><a href="{% url "journal" %}">Відвідування</a></li>
-                    <li role="presentation"><a href="{% url "groups" %}">Групи</a></li>
+                    <li role="presentation" {% if students_url == request.path %} class="active" {% endif %}>
+                        <a href="{% url "home" %}">Студенти</a>
+                    </li>
+                    <li role="presentation" {% if journal_url == request.path %} class="active" {% endif %}>
+                        <a href="{% url "journal" %}">Відвідування</a>
+                    </li>
+                    <li role="presentation" {% if groups_url == request.path %} class="active" {% endif %}>
+                        <a href="{% url "groups" %}">Групи</a>
+                    </li>
                 </ul>
             </div>
         </div>
