--- a/students/templates/students/groups_list.html
+++ b/students/templates/students/groups_list.html
@@ -46,17 +46,7 @@
 
     </tbody>
 </table>
-<nav>
-  <ul class="pagination">
-    <li class="disabled"><a href="#">1</a></li>
-    <li><a href="#">2</a></li>
-    <li>
-      <a href="#" aria-label="Next">
-        <span aria-hidden="true">Далі</span>
-      </a>
-    </li>
-  </ul>
-</nav>
 <!-- End Groups Listing -->
+{% include "students/pagination.html" %}
 
 {% endblock content %}
