--- a/students/templates/students/students_list.html
+++ b/students/templates/students/students_list.html
@@ -54,17 +54,7 @@
 <!-- End Students Listing -->
 
 <!-- Start Pagination -->
-<nav>
-    <ul class="pagination">
-        <li><a href="#">&laquo;</a></li>
-        <li><a href="#">1</a></li>
-        <li class="active"><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">4</a></li>
-        <li><a href="#">5</a></li>
-        <li><a href="#">&raquo;</a></li>
-    </ul>
-</nav>
+{% include "students/pagination.html" %}
 <!-- End Pagination -->
 
 {% endblock content %}
