pagination block & sub-header block

--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -50,6 +50,7 @@
         <!-- End header -->
 
         <!-- Start sub-header -->
+        {% block sub-header %}
         <div class="row" id="sub-header">
             <div class="col-xs-12">
                 <ul class="nav nav-tabs">
@@ -65,6 +66,7 @@
                 </ul>
             </div>
         </div>
+        {% endblock sub-header %}
         <!-- End sub-header -->
 
         <!-- Start Main Page Content -->
