--- a/students/templates/students/students_edit.html
+++ b/students/templates/students/students_edit.html
@@ -6,6 +6,7 @@
 
 {% block title %}Форма редагування студента{% endblock title %}
 
+{% block sub-header %}{% endblock sub-header %}
 
 {% block content %}
 
