--- a/students/templates/students/students_list.html
+++ b/students/templates/students/students_list.html
@@ -29,7 +29,14 @@
     {% for student in students %}
     <tr>
         <td>{{ forloop.counter }}</td>
-        <td><img src="{% static student.image %}" height="30" width="30" class="img-circle"></td>
+
+        <td>
+            {% if student.photo %}
+                <img src="{{ student.photo.url }}" height="30" width="30" class="img-circle">
+            {% else %}
+                <img src="{% static "img/default_user.png" %}" height="30" width="30" class="img-circle">
+            {% endif %}
+        </td>
         <td><a title="Редагувати" href="{% url "students_edit" student.id %}">{{ student.last_name }}</a></td>
         <td><a title="Редагувати" href="{% url "students_edit" student.id %}">{{ student.first_name }}</a></td>
         <td>{{ student.ticket }}</td>
