--- a/students/templates/students/students_list.html
+++ b/students/templates/students/students_list.html
@@ -14,10 +14,17 @@
 
 <!-- Start Students Listing -->
 <table class="table table-hover table-striped table-condensed">
-    {% with order_by=request.GET.order_by  reverse=request.GET.reverse %}
+    {% with order_by=request.GET.order_by reverse=request.GET.reverse %}
     <thead>
     <tr>
-        <th><a href="#">#</a></th>
+        <th>
+            <a href="{% url "home" %}?order_by=id{% if order_by == 'id' and reverse != '1' %}&amp;reverse=1{% endif %}">
+                #
+                {% if order_by == 'id' and reverse != '1' %}&uarr;
+                {% elif order_by == 'id' and reverse == '1' %}&darr;
+                {% endif %}
+            </a>
+        </th>
         <th>Фото</th>
         <th>
             <a href="{% url "home" %}?order_by=last_name{% if order_by == 'last_name' and reverse != '1' %}&amp;reverse=1{% endif %}">
