students_add form (basic validation)

--- a/students/templates/students/students_add.html
+++ b/students/templates/students/students_add.html
@@ -12,13 +12,15 @@
     <form action="{% url 'students_add' %}" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <div>
-            <label for="first_name">Ім'я</label>
+            <label for="first_name">Ім'я*</label>
             <input type="text" value="" name="first_name" id="first_name" placeholder="Введіть Ваше ім'я">
+            <span class="help-block">{{ errors.first_name }}</span>
         </div>
 
         <div>
-            <label for="last_name">Прізвище</label>
+            <label for="last_name">Прізвище*</label>
             <input type="text" value="" name="last_name" id="last_name" placeholder="Введіть Ваше прізвище">
+            <span class="help-block">{{ errors.last_name }}</span>
         </div>
 
         <div>
@@ -27,28 +29,31 @@
         </div>
 
         <div>
-            <label for="birthday">Дата народження</label>
+            <label for="birthday">Дата народження*</label>
             <input type="text" value="" name="birthday" id="birthday" placeholder="Наприклад: 1984-12-30">
+            <span class="help-block">{{ errors.birthday }}</span>
         </div>
 
         <div>
             <label for="photo">Фото</label>
-            <input type="text" value="" name="photo" id="photo">
+            <input type="file" value="" name="photo" id="photo">
         </div>
 
         <div>
             <label for="ticket">Білет</label>
             <input type="text" value="" name="ticket" id="ticket">
+            <span class="help-block">{{ errors.ticket }}</span>
         </div>
 
         <div>
-            <label for="student_group">Група</label>
+            <label for="student_group">Група*</label>
             <select name="student_group" id="student_group">
                 <option value="">Виберіть групу</option>
                 {% for group in groups %}
                     <option value="{{ group.id }}">{{ group.title }}</option>
                 {% endfor %}
             </select>
+            <span class="help-block">{{ errors.student_group }}</span>
         </div>
 
         <div>
